--- a/_data/wiki/getting-started.yml
+++ b/_data/wiki/getting-started.yml
@@ -55,8 +55,8 @@
 
     - step: 2
       title: "Firmware Upgrade"
-      url: "/posts/vesc-firmware-upgrade/"
-      lang_ref: "vesc-firmware-upgrade"
+      url: "/posts/vesc-firmware-upgrade-guide/"
+      lang_ref: "vesc-firmware-upgrade-guide"
       description: "Stable firmware (6.05) upgrade guide"
 
     - step: 3
