--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -21,6 +21,9 @@ inyeong-choi:
   name: Inyeong Choi
   url: https://github.com/iyee-Choi  # 선택사항
 
+heedo-kim:
+  name: Heedo Kim
+  url: https://github.com/heedo7425  # 선택사항
 
 # 추가 저자 예시:
 # cotes:
